force-app/main/default/objects/clofor_com_cfs__AuditResourceAllocate__c/clofor_com_cfs__AuditResourceAllocate__c.object-meta.xml
<CustomObject>
    <description>Audit Resource Allocation</description>
    <label>Audit/INV Check Resource</label>
    <nameField>
        <displayFormat>ADRS-{000000}</displayFormat>
        <label>Audit Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit/INV Check Resource</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>