force-app/main/default/objects/clofor_com_cfs__AuditResourceAllocate__c/fields/clofor_com_cfs__AttendeeDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AttendeeDetail__c</fullName>
    <formula>clofor_com_cfs__AttendeeID__r.clofor_com_cfs__Summary__c</formula>
    <label>Attendee Detail</label>
    <type>Text</type>
</CustomField>