force-app/main/default/objects/clofor_com_cfs__AuditResourceAllocate__c/fields/clofor_com_cfs__AttendeeID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AttendeeID__c</fullName>
    <label>Attendee ID</label>
    <referenceTo>clofor_com_cfs__WORKER__c</referenceTo>
    <relationshipName>AuditResource</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>