force-app/main/default/objects/clofor_com_cfs__AuditResourceAllocate__c/fields/clofor_com_cfs__AttendeeRole__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AttendeeRole__c</fullName>
    <label>Attendee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__WorkRole</valueSetName>
    </valueSet>
</CustomField>