force-app/main/default/objects/clofor_com_cfs__AuditResourceAllocate__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__AuditID__c</columns>
    <columns>clofor_com_cfs__AttendeeID__c</columns>
    <columns>clofor_com_cfs__AttendeeDetail__c</columns>
    <columns>clofor_com_cfs__AttendeeRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>